Implement UI layer and fix minor bugs

--- a/app/src/main/res/layout/list_item_plant.xml
+++ b/app/src/main/res/layout/list_item_plant.xml
@@ -21,7 +21,7 @@
     <data>
         <variable
             name="plant"
-            type="ru.aasmc.plants.model.Plant"/>
+            type="ru.aasmc.plants.data.model.Plant"/>
     </data>
 
     <ru.aasmc.plants.ui.MaskedCardView
